<resources>
    <string name="app_name">Tracer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hint_et_login_user">Account here</string>
    <string name="hind_et_login_password">Password</string>
    <string name="text_btn_login_login">Login</string>
    <string name="item_nav_user_management">User Management</string>
    <string name="item_nav_realtime_loc">Realtime Location</string>
    <string name="item_nav_device_info_management">Device Infomation Management</string>
    <string name="item_nav_device_config">Device Configure</string>
    <string name="item_nav_device_data_show">Device Data Reveal</string>
    <string name="item_nav_history_loc">History Location</string>
    <string name="item_nav_event_data">Event Data</string>
    <string name="item_nav_wet_chart">Humidity Curve</string>
    <string name="item_nav_temp_chart">Temperature Curve</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_nav_index">Control Center</string>
    <string name="current_device_info">Current Device Info</string>
    <string name="chose_another_dev">Chose Another Device</string>
    <string name="select_by_id">Select by ID</string>
    <string name="cnacel">Cancel</string>
</resources>
