<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_management"
            android:icon="@drawable/ic_users"
            android:title="@string/item_nav_user_management" />
        <item
            android:id="@+id/nav_realtime_loc"
            android:icon="@drawable/ic_map_marker"
            android:title="@string/item_nav_realtime_loc" />
        <item
            android:id="@+id/nav_device_info_management"
            android:icon="@drawable/ic_info"
            android:title="@string/item_nav_device_info_management" />
        <item
            android:id="@+id/nav_device_config"
            android:icon="@drawable/ic_cog"
            android:title="@string/item_nav_device_config" />


        <item
            android:checkable="false"
            android:title="@string/item_nav_device_data_show" />

        <item
            android:id="@+id/nav_history_loc"
            android:icon="@drawable/ic_map"
            android:title="@string/item_nav_history_loc" />
        <item
            android:id="@+id/nav_event_data"
            android:icon="@drawable/ic_database"
            android:title="@string/item_nav_event_data" />
        <item
            android:id="@+id/nav_wet_chart"
            android:icon="@drawable/ic_bar_chart"
            android:title="@string/item_nav_wet_chart" />
        <item
            android:id="@+id/nav_temp_chart"
            android:icon="@drawable/ic_thermometer"
            android:title="@string/item_nav_temp_chart" />


    </group>

</menu>
